Completed Flex Exercise 7 - Flex container around sidebar and cards, Seperate container for the cards themselves - Using flex: 1 so that sidebar takes up space between header and footer. - Utilizing flex-wrap so that text wraps to new line within each card. - Using padding and gaps to ensure proper spacing between elements.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -45,6 +45,34 @@ body {
 .sidebar {
   flex-grow: 1;
   flex-shrink: 0;
+  display: flex;
+  justify-content: flex-start;
+  padding: 16px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+
+.container {
+  flex: 1;
+  display: flex;
+}
+
+.content {
+  padding: 48px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 32px;
 }
 
 .card {
@@ -53,7 +81,7 @@ body {
   border-radius: 4px;
 }
 
-.container {
-  flex: 1;
-  display: flex;
+.card {
+  padding: 16px;
+  width: 300px;
 }
